
[TestImportDeclarations/default_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 7-10,
            },
            From: "module",
            span: 0-24,
        },
    },
}
---

[TestImportDeclarations/named_import_single - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
            },
            From: "module",
            span: 0-28,
        },
    },
}
---

[TestImportDeclarations/named_import_multiple - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "baz",
                        span: 19-22,
                    },
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: 19-22,
                    },
                    span: 19-22,
                },
            },
            From: "module",
            span: 0-38,
        },
    },
}
---

[TestImportDeclarations/named_import_with_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 16-19,
                    },
                    span: 9-19,
                },
            },
            From: "module",
            span: 0-35,
        },
    },
}
---

[TestImportDeclarations/named_import_mixed - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: 21-24,
                    },
                    span: 14-24,
                },
            },
            From: "module",
            span: 0-40,
        },
    },
}
---

[TestImportDeclarations/namespace_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamespaceAs: &dts_parser.Ident{
                Name: "foo",
                span: 12-15,
            },
            From: "module",
            span: 0-29,
        },
    },
}
---

[TestImportDeclarations/default_and_named - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 7-10,
            },
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            From: "module",
            span: 0-33,
        },
    },
}
---

[TestImportDeclarations/default_and_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 7-10,
            },
            NamespaceAs: &dts_parser.Ident{
                Name: "bar",
                span: 17-20,
            },
            From: "module",
            span: 0-34,
        },
    },
}
---

[TestImportDeclarations/side_effect_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            From: "module",
            span: 0-15,
        },
    },
}
---

[TestImportDeclarations/type-only_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 14-17,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            From: "module",
            TypeOnly: true,
            span: 0-33,
        },
    },
}
---

[TestImportDeclarations/type-only_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamespaceAs: &dts_parser.Ident{
                Name: "foo",
                span: 17-20,
            },
            From: "module",
            TypeOnly: true,
            span: 0-34,
        },
    },
}
---

[TestImportDeclarations/trailing_comma - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            From: "module",
            span: 0-34,
        },
    },
}
---

[TestExportDeclarations/export_variable - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.VarDecl{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 19-20,
            },
            TypeAnn: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 22-28,
            },
            export: true,
            declare: true,
            span: 15-28,
        },
    },
}
---

[TestExportDeclarations/export_function - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.FuncDecl{
            Name: &dts_parser.Ident{
                Name: "foo",
                span: 24-27,
            },
            ReturnType: &dts_parser.PrimitiveType{
                Kind: 2,
                span: 31-35,
            },
            export: true,
            declare: true,
            span: 15-35,
        },
    },
}
---

[TestExportDeclarations/export_type_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 12-15,
            },
            TypeAnn: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 18-24,
            },
            export: true,
            span: 7-24,
        },
    },
}
---

[TestExportDeclarations/export_interface - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 17-20,
            },
            Members: []dts_parser.InterfaceMember{
                &dts_parser.PropertySignature{
                    Name: &dts_parser.Ident{
                        Name: "x",
                        span: 23-24,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 26-32,
                    },
                    span: 23-32,
                },
            },
            export: true,
            span: 7-34,
        },
    },
}
---

[TestExportDeclarations/export_class - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 21-24,
            },
            export: true,
            declare: true,
            span: 15-27,
        },
    },
}
---

[TestExportDeclarations/export_enum - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.EnumDecl{
            Name: &dts_parser.Ident{
                Name: "Color",
                span: 12-17,
            },
            Members: []*dts_parser.EnumMember{
                &dts_parser.EnumMember{
                    Name: &dts_parser.Ident{
                        Name: "Red",
                        span: 20-23,
                    },
                    span: 20-23,
                },
                &dts_parser.EnumMember{
                    Name: &dts_parser.Ident{
                        Name: "Green",
                        span: 25-30,
                    },
                    span: 25-30,
                },
                &dts_parser.EnumMember{
                    Name: &dts_parser.Ident{
                        Name: "Blue",
                        span: 32-36,
                    },
                    span: 32-36,
                },
            },
            export: true,
            span: 7-38,
        },
    },
}
---

[TestExportDeclarations/export_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamespaceDecl{
            Name: &dts_parser.Ident{
                Name: "Utils",
                span: 17-22,
            },
            export: true,
            span: 7-26,
        },
    },
}
---

[TestExportDeclarations/named_export_single - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
            },
            span: 0-12,
        },
    },
}
---

[TestExportDeclarations/named_export_multiple - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: 19-22,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "baz",
                        span: 19-22,
                    },
                    span: 19-22,
                },
            },
            span: 0-22,
        },
    },
}
---

[TestExportDeclarations/named_export_with_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 16-19,
                    },
                    span: 9-19,
                },
            },
            span: 0-19,
        },
    },
}
---

[TestExportDeclarations/named_export_mixed - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "baz",
                        span: 21-24,
                    },
                    span: 14-24,
                },
            },
            span: 0-24,
        },
    },
}
---

[TestExportDeclarations/export_all - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAllStmt{
            From: "module",
            span: 0-22,
        },
    },
}
---

[TestExportDeclarations/export_all_as_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAllStmt{
            AsName: &dts_parser.Ident{
                Name: "foo",
                span: 12-15,
            },
            From: "module",
            span: 0-29,
        },
    },
}
---

[TestExportDeclarations/export_from_module - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
            },
            From: "module",
            span: 0-28,
        },
    },
}
---

[TestExportDeclarations/export_from_with_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 16-19,
                    },
                    span: 9-19,
                },
            },
            From: "module",
            span: 0-35,
        },
    },
}
---

[TestExportDeclarations/export_default_interface - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 25-28,
            },
            export: true,
            default_: true,
            span: 15-32,
        },
    },
}
---

[TestExportDeclarations/export_default_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 20-23,
            },
            TypeAnn: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 26-32,
            },
            export: true,
            default_: true,
            span: 15-32,
        },
    },
}
---

[TestExportDeclarations/export_assignment - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAssignmentStmt{
            Name: &dts_parser.Ident{
                Name: "foo",
                span: 9-12,
            },
            span: 0-12,
        },
    },
}
---

[TestExportDeclarations/export_as_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAsNamespaceStmt{
            Name: &dts_parser.Ident{
                Name: "MyLib",
                span: 20-25,
            },
            span: 0-25,
        },
    },
}
---

[TestExportDeclarations/type-only_export - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "Foo",
                        span: 14-17,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "Foo",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            TypeOnly: true,
            span: 0-17,
        },
    },
}
---

[TestExportDeclarations/trailing_comma - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            span: 0-17,
        },
    },
}
---

[TestComplexImportExportScenarios/multiple_imports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
            },
            From: "a",
            span: 0-23,
        },
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 36-39,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 36-39,
                    },
                    span: 36-39,
                },
            },
            From: "b",
            span: 27-50,
        },
        &dts_parser.ImportDecl{
            NamespaceAs: &dts_parser.Ident{
                Name: "c",
                span: 66-67,
            },
            From: "c",
            span: 54-76,
        },
    },
}
---

[TestComplexImportExportScenarios/imports_and_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "Foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "Foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
            },
            From: "lib",
            span: 0-25,
        },
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 46-49,
            },
            Extends: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Foo",
                        span: 58-61,
                    },
                    span: 58-61,
                },
            },
            export: true,
            span: 36-65,
        },
    },
}
---

[TestComplexImportExportScenarios/re-export_pattern - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            From: "module",
            span: 0-33,
        },
        &dts_parser.ExportAllStmt{
            From: "other",
            span: 37-58,
        },
    },
}
---

[TestComplexImportExportScenarios/type-only_imports_and_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "A",
                        span: 14-15,
                    },
                    Local: &dts_parser.Ident{
                        Name: "A",
                        span: 14-15,
                    },
                    span: 14-15,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "B",
                        span: 17-18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "B",
                        span: 17-18,
                    },
                    span: 17-18,
                },
            },
            From: "types",
            TypeOnly: true,
            span: 0-33,
        },
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "A",
                        span: 51-52,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "A",
                        span: 51-52,
                    },
                    span: 51-52,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "B",
                        span: 54-55,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "B",
                        span: 54-55,
                    },
                    span: 54-55,
                },
            },
            TypeOnly: true,
            span: 37-55,
        },
    },
}
---

[TestComplexImportExportScenarios/mixed_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 17-20,
            },
            export: true,
            span: 7-24,
        },
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 37-40,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 37-40,
                    },
                    span: 37-40,
                },
            },
            From: "lib",
            span: 28-53,
        },
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 78-81,
            },
            export: true,
            default_: true,
            span: 72-85,
        },
    },
}
---

[TestModuleErrorCases/import_without_from - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 14-14,
            Message: "Expected 104 but got 23",
        },
        &dts_parser.Error{
            Span: 0-6,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestModuleErrorCases/import_missing_braces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 12-15,
            Message: "Expected 104 but got 39",
        },
        &dts_parser.Error{
            Span: 0-6,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 16-20,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 16-20,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 21-29,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 21-29,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestModuleErrorCases/export_without_name - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestModuleErrorCases/malformed_namespace_import - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 9-12,
            Message: "Expected 105 but got 39",
        },
        &dts_parser.Error{
            Span: 0-6,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 13-17,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 13-17,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 18-26,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 18-26,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestModuleErrorCases/export_=_without_identifier - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 9-9,
            Message: "Expected identifier",
        },
        &dts_parser.Error{
            Span: 0-6,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestExportDeclarations/export_without_any_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            span: 0-6,
        },
    },
}
---

[TestImportDeclarations/single_quote_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 7-10,
            },
            From: "module",
            span: 0-24,
        },
    },
}
---

[TestImportDeclarations/single_quote_named_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            From: "module",
            span: 0-33,
        },
    },
}
---

[TestImportDeclarations/single_quote_side_effect - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            From: "side-effects",
            span: 0-21,
        },
    },
}
---

[TestExportDeclarations/single_quote_export_all - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAllStmt{
            From: "module",
            span: 0-22,
        },
    },
}
---

[TestExportDeclarations/single_quote_export_from - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 14-17,
                    },
                    span: 14-17,
                },
            },
            From: "module",
            span: 0-33,
        },
    },
}
---
